--- a/front-main-app/index.html
+++ b/front-main-app/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Fast Big Data Project By FBD Team" />
-  <title>飞驰数据</title>
+  <title>飞驰大数据</title>
   <!-- Data table CSS -->
   <link href="/css/jquery.dataTables.min.css" rel="stylesheet" type="text/css">
   <link href="/css/jquery.toast.min.css" rel="stylesheet" type="text/css">
@@ -18,6 +18,13 @@
   <link href="/css/bootstrap-treeview.min.css" rel="stylesheet" type="text/css">
   <!-- 地图 CSS -->
   <link href="/css/jquery-jvectormap-2.0.2.css" rel="stylesheet" type="text/css">
+  <!-- bootstrap-select CSS -->
+  <link href="/css/bootstrap-select.min.css" rel="stylesheet" type="text/css">
+  <!-- Fancy-Buttons CSS -->
+  <link href="/css/fancy-buttons.css" rel="stylesheet" type="text/css">
+  <!-- switchery CSS -->
+  <link href="/css/switchery.min.css" rel="stylesheet" type="text/css">
+  <link href="/css/morris.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -68,7 +75,20 @@
 
   <!-- 地图 -->
   <script src="/js/jquery-jvectormap-2.0.2.min.js"></script>
-  <script src="/js/jquery-jvectormap-world-mill-en.js"></script>
+  <!-- <script src="/js/jquery-jvectormap-world-mill-en.js"></script> -->
+  <script src="/js/jquery-jvectormap-cn-mill.js"></script>
+  <!-- <script src="https://jvectormap.com/js/jquery-jvectormap-cn-mill.js"></script> -->
+
+  <!-- Bootstrap Select JavaScript -->
+  <script src="/js/bootstrap-select.min.js"></script>
+
+  <!-- Switchery JavaScript -->
+  <!-- <script src="/js/switchery.min.js"></script> -->
+  <!-- ChartJS JavaScript -->
+  <!-- <script src="/js/Chart.min.js"></script> -->
+
+  <script src="/js/raphael.min.js"></script>
+  <script src="/js/morris.min.js"></script>
 </body>
 
 </html>
