--- a/front-main-app/index.html
+++ b/front-main-app/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/icon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Fast Big Data Project By FBD Team" />
   <title>飞驰大数据</title>
@@ -89,6 +89,8 @@
 
   <script src="/js/raphael.min.js"></script>
   <script src="/js/morris.min.js"></script>
+
+  <script src='/js/particles.js' type="text/javascript"></script>
 </body>
 
 </html>
